Update endpoint naming.
